--- a/expense-splitter-ui/src/app/features/settlements/settlement-list/settlement-list.component.scss
+++ b/expense-splitter-ui/src/app/features/settlements/settlement-list/settlement-list.component.scss
@@ -137,6 +137,10 @@
     gap: 12px;
   }
   
+  .settle-btn{
+    margin-top: 15px;
+  }
+  
   .settlement-card {
     mat-card-content {
       display: flex;
